--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>iCuckyTheDev</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1157/1157109.png" type="image/x-icon">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
@@ -63,121 +64,6 @@
 		</div>
 	</div>
 	
-	<div class="travel-section">	
-		<div class="travel-close hover-target"></div>
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-12 text-center">
-					<h3>travel</h3>
-				</div>
-				<div class="col-12 mt-3 text-center">
-					<p><span>Canon PowerShot S95</span></p>
-				</div>
-				<div class="col-12 text-center">
-					<p>
-						focal length: 22.5mm<br>
-						aperture: ƒ/5.6<br>
-						exposure time: 1/1000<br>
-						ISO: 80
-					</p>
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-			</div>
-		</div>
-	</div>
-	
-	<div class="wildlife-section">	
-		<div class="wildlife-close hover-target"></div>
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-12 text-center">
-					<h3>wildlife</h3>
-				</div>
-				<div class="col-12 mt-3 text-center">
-					<p><span>Canon PowerShot S95</span></p>
-				</div>
-				<div class="col-12 text-center">
-					<p>
-						focal length: 22.5mm<br>
-						aperture: ƒ/5.6<br>
-						exposure time: 1/1000<br>
-						ISO: 80
-					</p>
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<img src="http://www.ivang-design.com/svg-load/portfolio/photo-p.jpg" alt="">
-				</div>
-			</div>
-		</div>
-	</div>
 	
 	<div class="nature-section">	
 		<div class="nature-close hover-target"></div>
