--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>iCuckyTheDev</title>
+  <title>iCucky's Portfolio</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1157/1157109.png" type="image/x-icon">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
 
